# projet_big_data_cytech_25

./: .gitignore  README.md  Rapport.md  docker-compose.yml
ex01_data_retrieval/: .jvmopts  build.sbt  ex01-guide.md  run_ex01.sh  run_tests.sh
ex01_data_retrieval/src/main/scala/fr/cytech/integration/: Main.scala
ex01_data_retrieval/src/test/scala/fr/cytech/integration/: MainSpec.scala
ex02_data_cleaning/: .jvmopts  build.sbt  ex02-guide.md  run_ex02.sh  run_tests.sh
ex02_data_cleaning/src/main/scala/fr/cytech/cleaning/: Main.scala
ex02_data_cleaning/src/test/scala/fr/cytech/cleaning/: MainSpec.scala
ex02_data_ingestion/: .jvmopts  build.sbt  ex02-branch2-guide.md  run_ex02_branch2.sh  run_tests.sh
ex02_data_ingestion/src/main/scala/fr/cytech/ingestion/: Main.scala
ex02_data_ingestion/src/test/scala/fr/cytech/ingestion/: MainSpec.scala
ex03_sql_table_creation/: creation.sql  exo03_guide.md  insertion.sql  run_ex03.sh
ex04_dashboard/: .env.example  app.py  ex04-guide.md  requirements.txt  run_ex04.sh
ex05_ml_prediction_service/: README.md  app.py  ex05-guide.md  pyproject.toml  run_ex05.sh
ex05_ml_prediction_service/models/: latest_model.joblib
ex05_ml_prediction_service/src/: __init__.py  data_validation.py  predict.py  train.py
ex05_ml_prediction_service/tests/: __init__.py  test_data_validation.py  test_model.py
ex06_airflow/: README.md  docker-compose.airflow.yml  ex06-guide.md  run_ex06.sh
ex06_airflow/dags/: nyc_taxi_pipeline.py
