[project]
name = "ex05-ml-prediction-service"
version = "1.0.0"
description = "Service de prediction ML pour les tarifs NYC Taxi"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "joblib>=1.3.0",
    "minio>=7.2.0",
    "streamlit>=1.28.0",
    "plotly>=5.18.0",
    "pytest>=7.4.0",
    "flake8>=6.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "flake8>=6.1.0",
    "pyment>=0.3.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.flake8]
max-line-length = 100
exclude = [".venv", "venv", "__pycache__", ".git"]
ignore = ["E501", "W503"]
